tests/ui/imports/absolute-paths-in-nested-use-groups.stderr
error[E0433]: the crate root in paths can only be used in start position
  --> $DIR/absolute-paths-in-nested-use-groups.rs:6:5
   |
LL |     ::bar,
   |     ^ can only be used in path start position

error[E0433]: `super` in paths can only be used in start position
  --> $DIR/absolute-paths-in-nested-use-groups.rs:8:5
   |
LL |     super::bar,
   |     ^^^^^ can only be used in path start position

error[E0433]: `self` in paths can only be used in start position
  --> $DIR/absolute-paths-in-nested-use-groups.rs:10:5
   |
LL |     self::bar,
   |     ^^^^ can only be used in path start position

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0433`.
